# grid-surfer

./: .dockerignore  DEVELOPMENT.md  Dockerfile  LICENSE.txt  README.md  app.py  build-docker.sh  config.toml  deploy.sh  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: GSE25724_top_table_clean.csv  demo_datasets.json  save_demos.py
pages/: page_01.py
src/ui/: describe.py  distplot.py  dotplot.py  gs_body.py  gs_state.py  gs_utils.py  gsutils.py  xyplot.py
