[project]
name = "grid-surfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "boto3>=1.34.122",
    "streamlit-option-menu>=0.3.13",
    "pydantic>=2.7",
    "poetry-plugin-dotenv>=2.2.3",
    "streamlit-aggrid>=1.0.5",
    "altair>=4.0,<6",
    "pandas>=1.3.0,<3",
    "streamlit-pydantic",
    "vega_datasets>=v0.9"
]

[tool.uv.sources]
streamlit-pydantic = { git = "https://github.com/HIL340/streamlit-pydantic.git", rev = "pydantic-2.7" }

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
